examples/test/testpolicy3434.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3434
  namespace: namespace64
spec:
  podSelector:
    matchLabels:
      key22: value44
      key43: value18
      key13: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value22
          key24: value20
          key47: value13
      podSelector:
        matchLabels:
          key12: value34
